--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -43,7 +43,7 @@ We will next introduce the autoregressive process of order one, or AR(1) process
 [The AR(1) process is defined as]{#l2g1 .mark}:
 
 $$
-y_t = \phi y_{t-1} + \varepsilon_t \qquad \varepsilon_t \sim \mathcal{N}(0, v), i.i.d.
+y_t = \phi y_{t-1} + \varepsilon_t \qquad \varepsilon_t \overset{iid}{\sim} \mathcal{N}(0, v)
 $$
 
 where $\phi$ is the AR(1) coefficient
