--- a/tasks/todo.qmd
+++ b/tasks/todo.qmd
@@ -8,6 +8,23 @@
 
 - [ ] lessons should start with a goals section with links to the relevant sections in the notes.
 
+which should look like this:
+
+::: {.callout-note collapse="true"}
+## Learning Objectives
+
+-   [x] Perform maximum likelihood estimation[\#](#l1g1)
+-   [x] Perform Bayesian inference [\#](#l1g1)
+
+:::
+
+with the goal demarcated as:
+
+[text of the goal]{#l1g_1 .mark}
+
+where l1 is the lesson number and g1 is the goal number.
+
+
 ## Code Blocks
 
 - [ ] update each file so all code blocks have a unique label id starting with #lst unless the code generates a figure in which case it should start with #fig.
