--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -365,6 +365,75 @@ cat("\n MLE of full likelihood for phi: ", result$maximum)
 ![inference](images/m1_0051.png){#fig-c2l1-s1-inference .column-margin  group="slides" width="53mm"}
 
 
+$$
+y_t= \phi y_{t-1} + \epsilon_t, \quad \epsilon_t \overset{iid}{\sim} \mathcal{N}(0, v), \quad \phi \in (-1,1)
+$$ {#eq-ar1-model}
+
+$$
+\utilde{y} = \mathbb{X}\utilde{\beta} + \utilde{\epsilon}
+$$ {#eq-ar1-model-bayes}
+
+where $\mathbb{X}$ is the design matrix with $y_1$ as the first column and $y_2, \ldots, y_{T-1}$ as the second column, $\utilde{\beta} = \phi$ is the AR coefficient, and $\utilde{\epsilon} \sim \mathcal{N}(0, v\mathbf{I})$ is the error term.
+
+$$
+\utilde{y} = \begin{pmatrix}
+y_1 \\
+y_2 \\
+\vdots \\
+y_{T-1}
+\end{pmatrix}
+$$ {#eq-utilde-y-ar1}
+
+$$
+\mathbb{X} = \begin{pmatrix}
+y_1 \\
+y_2 \\
+\vdots \\
+y_{T-1} 
+\end{pmatrix}
+$$ {#eq-design-matrix-ar1}
+
+$$
+\utilde{\beta} = \phi
+$$ {#eq-ar1-model}
+
+
+$$
+\utilde{\epsilon} \sim \mathcal{N}(0, v\mathbf{I})
+$$ {#eq-ar1-model-bayes}
+
+
+$$
+p(y_{2:T} \mid y_1, \phi, v) =  \frac{1}{(2\pi v)^{\frac{T-1}{2}}} \exp\left(-\frac{(\utilde{y} - \mathbb{X}\utilde{\beta})'(\utilde{y} - \mathbb{X}\utilde{\beta})}{2v}\right)
+$$ {#eq-likelihood-ar1-conditional}
+
+
+$$
+p(\phi, v \mid y_{1:T}) \propto p(\phi, v) p(y_{2:T} \mid y_1, \phi, v)
+$$ {#eq-posterior-ar1}
+
+
+$$
+\begin{aligned}
+p(\phi, v) \propto \frac{1}{v} &\cdot (\utilde{\beta} \mid v, \mathbb{X}, \utilde{y}) &\sim & \mathcal{N}(\hat{\utilde{\beta}}, v(\mathbb{X}'\mathbb{X})^{-1}) \\
+  & \cdot (v \mid \mathbb{X}, \utilde{y}) &\sim & \mathcal{IG}\left(\frac{T-2}{2}, \frac{1}{2}Q(\hat{\utilde{\beta}}_{MLE}) \right)
+\end{aligned}
+$$ {#eq-prior-ar1}
+
+$$
+\begin{aligned}
+\hat{\utilde{\beta}_{MLE}} &= (\mathbb{X}'\mathbb{X})^{-1}\mathbb{X}'\utilde{y} \\
+&= \hat{\phi}_{MLE} = \frac{\sum_{t=2}^T y_t y_{t-1}}{\sum_{t=2}^T y_{t-1}^2}
+\end{aligned}
+$$ {#eq-mle-ar1-phi-bayes}
+
+
+$$
+Q(\hat{\phi}_{MLE}) = \sum_{t=2}^T (y_t - \hat{\phi}_{MLE}\ y_{t-1})^2
+$$ {#eq-q-ar1-q-mle-bayes}
+
+
+
 ## Bayesian inference in the AR(1): Conditional likelihood example (video)
 
 This video walks through the code snippet below and provides examples of how to sample from the posterior distribution of the AR coefficient $\psi$ and the variance $v$ using the conditional likelihood and a reference prior.
