--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -58,6 +58,9 @@ $$
 \hat{\boldsymbol{\beta}}_{MLE} = (\mathbf{X}'\mathbf{X})^{−1}\mathbf{X}'\mathbf{y},
 $$ {#eq-mle-estimator-beta}
 
+\index{Moore-Penrose pseudoinverse}
+where $(X^+ = \mathbf{X}'\mathbf{X})^{−1}\mathbf{X}'$ is the [Moore-Penrose pseudoinverse](https://en.wikipedia.org/wiki/Moore%E2%80%93Penrose_inverse) of the matrix $\mathbf{X}$. This Moore-Penrose pseudoinverse of the matrix $\mathbf{X}$ is the most widely known generalization of the inverse matrix and is used to obtain the least squares solution to the linear regression problem.
+
 and the MLE for $v$ is given by:
 
 $$
