--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -20,6 +20,7 @@ keywords:
 
 # The EM algorithm for Mixture Models (Video){#sec-em-algorithm-for-mixture-models}
 
+\index{mixture!EM algorithm}
 Maximum likelihood estimation is the most common approach to estimate the parameters of statistical models. However, attempting to obtain maximum likelihood estimates (MLEs) $\hat{\omega}$ and $\hat{\theta}$ by directly maximizing the observed-data likelihood
 
 $$
