--- a/C3-L04.qmd
+++ b/C3-L04.qmd
@@ -11,16 +11,17 @@ keywords:
 
 # MCMC algorithm for Mixture Models
 
+\index{mixture!MCMC algorithm}
 Markov chain Monte Carlo (MCMC) algorithm are typically used to perform Bayesian inference in complex models. 
 In MCMC algorithms we repeatedly sample from the full conditional distributions of each block of parameters given fixed values for the rest. 
 After an appropriate burn-in period, they generate samples that are dependent but identically distributed according to the posterior distribution of interest.
 
 ## Markov Chain Monte Carlo algorithms part 1
 
-![MCMC - Priors of convenience](images/c3l3-ss-01-mcmc-part1.png){.column-margin width="53mm"}
+![MCMC - Priors of convenience](images/c3l3-ss-01-mcmc-part1.png){#fig-s_01 .column-margin width="53mm" group="slides"}
 
 
-![MCMC - Complete data Likelihood](images/c3l3-ss-02-mcmc-part1.png){.column-margin width="53mm"}
+![MCMC - Complete data Likelihood](images/c3l3-ss-02-mcmc-part1.png){#fig-s_02 .column-margin width="53mm" group="slides"}
 
 
 ::: {.callout-tip}
@@ -114,17 +115,17 @@ In particular, it's not only similar but it's proportional to it. So it will be 
 
 ## Markov Chain Monte Carlo algorithms part 2
 
-![posterior distribution - weights](images/c3l3-ss-03-mcmc-part2.png){.column-margin width="53mm"}
+![posterior distribution - weights](images/c3l3-ss-03-mcmc-part2.png){#fig-s_03 .column-margin width="53mm" group="slides"}
 
 
 
 
-![posterior distribution - components](images/c3l3-ss-04-mcmc-part2.png){.column-margin width="53mm"}
+![posterior distribution - components](images/c3l3-ss-04-mcmc-part2.png){#fig-s_04 .column-margin width="53mm" group="slides"}
 
 
 
 
-![posterior distribution - parameters](images/c3l3-ss-05-mcmc-part2.png){.column-margin width="53mm"}
+![posterior distribution - parameters](images/c3l3-ss-05-mcmc-part2.png){#fig-s_05 .column-margin width="53mm" group="slides"}
 
 
 
@@ -165,8 +166,7 @@ So to derive these full conditionals, what we will do is we will pick particular
 particular four conditionals. 
 Let's proceed now to derive each one of the four conditionals that we need to derive a Gibbs sampler or a Markov Chain Monte Carlo algorithm for this problem.
 Let's just start with the full posterior distribution for the weights, and please note that we're going to work with all the weights as a block, so we're going to try to sample them all together, and rather than looking at each one of them at a time. o this full conditional distribution is made up of the terms in this full posterior distribution that involves Omega k, and if you look at this expression carefully, you will see that this piece doesn't depend on Omega k anyway, and that this piece doesn't depend on any of the Omega case either, so it's just this two pieces in the middle that we need to consider. 
-Furthermore, the two pieces are very similar, so both in both products over K of the weight raised to some power, so we can actually combine the two expressions together and just write them as the product from one to capital k of Omega _k raised to the sum of
-these indicator functions, plus a_k minus 1. This looks exactly like
+Furthermore, the two pieces are very similar, so both in both products over K of the weight raised to some power, so we can actually combine the two expressions together and just write them as the product from one to capital k of Omega _k raised to the sum of these indicator functions, plus a_k minus 1. This looks exactly like
 the prior that we used, except that now, we have updated parameters. 
 So I could write this as the product of Omega_k raised to the a_k, call them stars, minus one, where a_k a star, is just the original a_k plus the sum from one to n of the indicators of C_i equals to k. So just doing this little change, makes it very clear that the form of the posterior is exactly the same form as the prior. 
 In other words, this a conditionally conjugate prior for our problem, and that just means that Omega is going to be distributed as a Dirichlet, given all the other parameters, but with this updated parameters, a_1 star all the way to a_k star, and this is very interesting because essentially, a posteriori, we know that the expected value of Omega given all the other parameters, so this is the expected value of the full conditional. This is not expected value of the marginal posterior, but this is the expected value of the full conditional
@@ -210,23 +210,23 @@ This will become a little bit more clear once we do an example with mixture mode
 ## MCMC for location mixtures of normals Part 1
 
 
-![location mixture of Normals - priors](images/c3l3-ss-06-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin width="53mm"}
+![location mixture of Normals - priors](images/c3l3-ss-06-mcmc-for-location-mixtures-of-normals-part-1.png){#fig-s_06 .column-margin width="53mm" group="slides"}
 
 
 
-![location mixture of Normals - marginals ](images/c3l3-ss-07-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin width="53mm"}
+![location mixture of Normals - marginals ](images/c3l3-ss-07-mcmc-for-location-mixtures-of-normals-part-1.png){#fig-s_07 .column-margin width="53mm" group="slides"}
 
 
 
-![location mixture of Normals weights](images/c3l3-ss-08-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin width="53mm"}
+![location mixture of Normals weights](images/c3l3-ss-08-mcmc-for-location-mixtures-of-normals-part-1.png){#fig-s_08 .column-margin width="53mm" group="slides"}
 
 
 
-![location mixture of Normals - components](images/c3l3-ss-09-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin width="53mm"}
+![location mixture of Normals - components](images/c3l3-ss-09-mcmc-for-location-mixtures-of-normals-part-1.png){#fig-s_09 .column-margin width="53mm" group="slides"}
 
 
 
-![location mixture of Normals - $\sigma^2$](images/c3l3-ss-10-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin width="53mm"}
+![location mixture of Normals - $\sigma^2$](images/c3l3-ss-10-mcmc-for-location-mixtures-of-normals-part-1.png){#fig-s_10 .column-margin width="53mm" group="slides"}
 
 
 
@@ -241,7 +241,7 @@ $$
 we use a beta distribution with $a_1=1$ and $a_2=1$ for $\omega$
 which corresponds to a uniform distribution and is a special case of a Dirichlet for $K=2$.
 
-$\mu_k \sim N(\eta,\tau^2)$
+$\mu_k \sim \mathcal{N}(\eta,\tau^2)$
 
 Inverse Gamma for $\sigma^2$ with shape parameter $a$ and scale parameter $b$.
 
@@ -260,15 +260,15 @@ It seems that since this is a hierarchical model, we set the priors for differen
 
 ## MCMC for location mixtures of normals Part 2
 
-![location mixture of Normals $\mu$](images/c3l3-ss-11-mcmc-for-location-mixtures-of-normals-part-2.png){.column-margin width="53mm"}
+![location mixture of Normals $\mu$](images/c3l3-ss-11-mcmc-for-location-mixtures-of-normals-part-2.png){#fig-s_11 .column-margin width="53mm" group="slides"}
 
 
 
-![location mixture of Normals $\mu$ continued 1](images/c3l3-ss-12-mcmc-for-location-mixtures-of-normals-part-2.png){.column-margin width="53mm"}
+![location mixture of Normals $\mu$ continued 1](images/c3l3-ss-12-mcmc-for-location-mixtures-of-normals-part-2.png){#fig-s_12 .column-margin width="53mm" group="slides"}
 
 
 
-![location mixture of Normals $\mu$ continued 2](images/c3l3-ss-13-mcmc-for-location-mixtures-of-normals-part-2.png){.column-margin width="53mm"}
+![location mixture of Normals $\mu$ continued 2](images/c3l3-ss-13-mcmc-for-location-mixtures-of-normals-part-2.png){#fig-s_13 .column-margin width="53mm" group="slides"}
 
 
 
