--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -25,7 +25,18 @@ keywords:
 
 :::
 
-## Review of maximum likelihood and Bayesian inference in regression
+## Maximum likelihood and Bayesian inference in regression  📖
+
+This section is based on the handout provided in the course materials. 
+The gist of this handout is that if we can write the regression as the equation of a straight line, we should be able to make use of basic algebra to invert the equation and obtain an expression for the regression coefficients. 
+
+Prado snuck the Moore-Penrose pseudoinverse in this handout, then she used it in the class and notes. I'm thinking this isn't the first time this has come up in the specialization we used MLE to some degree in all the courses, and in depth in the previous course on mixtures.
+
+We do this by writing the equation in matrix form and then using the Moore-Penrose pseudoinverse to obtain the maximum likelihood estimator for the regression coefficients.
+
+This pseudoinverse is a neat bit of mathematics which allows us to not only invert the equation from the left but it somehow minimizes the sum of squared errors in the regression - I.e. we get the parameters while minimizing the sum of squared errors due to the variance term. One strong assumption we must make is that the design matrix $X$ is full rank, which means that the columns of the matrix are linearly independent. The columns of the design matrix correspond to the explanatory variables in the regression model.
+
+In reality as we are dealing with hierarchical models, so we will not always have a full rank design matrix, but we can still use the Moore-Penrose pseudoinverse to obtain the maximum likelihood estimator for the regression coefficients.
 
 ### Regression Models: Maximum Likelihood Estimation
 
@@ -96,7 +107,7 @@ $$ {#eq-posterior-regression}
 In addition it can be shown that
 
 -   $(\boldsymbol{\beta}\mid v, \mathbf{y}) \sim \mathcal{N} (\hat{\boldsymbol{\beta}}_{MLE} , v(\mathbf{X}'\mathbf{X})^{-1})$
--   $(v \mid \mathbf{y}) \sim \mathcal{IG}((n − k)/2, d/2)$ with
+-   $(v \mid \mathbf{y}) \sim \mathcal{IG}\left(\frac{(n − k)}{2}, \frac{1}{2}d\right)$ with
 
 $$
 d = (\mathbf{y} − \mathbf{X} \hat{\boldsymbol{\beta}}_{MLE} )′(\mathbf{y} − \mathbf{X} \hat{\boldsymbol{\beta}}_{MLE} )
@@ -108,7 +119,7 @@ with $k = dim(\boldsymbol\beta)$.
 
 [Given that $\mathbb{P}r(\boldsymbol\beta, v \mid \mathbf{y}) = \mathbb{P}r(\boldsymbol\beta \mid v, \mathbf{y})p(v \mid \mathbf{y})$ the equations above provide a way to directly sample from the posterior distribution of $\boldsymbol \beta$ and $v$ by first sampling v from the inverse-gamma distribution above and then conditioning on this sampled value of v, sampling $\boldsymbol \beta$ from the normal distribution above.]{.mark}
 
-## Maximum likelihood estimation in the AR(1) (video) {#sec-mle-ar1}
+## Maximum likelihood estimation in the AR(1) 🎥  {#sec-mle-ar1}
 
 ![MLE 1](images/m1_0041.png){#fig-s_0041 .column-margin  group="slides" width="53mm"}
 
@@ -268,8 +279,6 @@ So if I were to look at maximizing this function, we can think about taking firs
 
 ### Conclusion
 
-
-
 * **Full likelihood** is more general but computationally intensive.
 * **Conditional likelihood** simplifies estimation by leveraging regression theory.
 * When variance $v$ is known (e.g., $v = 1$), the optimization reduces to maximizing a univariate function of $\phi$.
@@ -285,32 +294,41 @@ So if I were to look at maximizing this function, we can think about taking firs
 | Useful when           | Modeling full joint process | Estimating $\phi$ efficiently in practice |
 
 
-## R code: MLE for the AR(1), examples (reading)
+## MLE for the AR(1) 📖 ℛ
 
-
-The following code allows you to compute the MLE of the AR coefficient $\psi$, the unbiased estimator of $v$, $s^2$ , and the MLE of v based on a dataset simulated from an AR(1) process and using the conditional likelihood.
+\index{AR(1) process!MLE}
+The following code allows you to compute the *MLE* of the AR coefficient $\psi$, the unbiased estimator of $v$, $s^2$ , and the *MLE* of $v$ based on a dataset simulated from an *AR(1) process* and using the conditional likelihood.
 
 ```{r}
 #| label: "MLE for AR(1)"
 set.seed(2021)
-phi=0.9 # ar coefficient
+phi=0.9    # <1>
 v=1
-sd=sqrt(v) # innovation standard deviation
-T=500 # number of time points
+sd=sqrt(v) # <2>
+T=500      # <3>
 yt=arima.sim(n = T, model = list(ar = phi), sd = sd) 
 
 ## Case 1: Conditional likelihood
-y=as.matrix(yt[2:T]) # response
-X=as.matrix(yt[1:(T-1)]) # design matrix
-phi_MLE=as.numeric((t(X)%*%y)/sum(X^2)) # MLE for phi
-s2=sum((y - phi_MLE*X)^2)/(length(y) - 1) # Unbiased estimate for v 
-v_MLE=s2*(length(y)-1)/(length(y)) # MLE for v
+y=as.matrix(yt[2:T])     # <4>
+X=as.matrix(yt[1:(T-1)]) # <5>
+phi_MLE=as.numeric((t(X)%*%y)/sum(X^2))   # <6> 
+s2=sum((y - phi_MLE*X)^2)/(length(y) - 1) # <7> 
+v_MLE=s2*(length(y)-1)/(length(y))        # <8> 
 
 cat("\n MLE of conditional likelihood for phi: ", phi_MLE, "\n",
     "MLE for the variance v: ", v_MLE, "\n", 
     "Estimate s2 for the variance v: ", s2, "\n")
-
 ```
+
+1. ar coefficient
+2. innovation standard deviation
+3. number of time points
+4. response variable
+5. design matrix
+6. MLE for phi 
+7. Unbiased estimate for v
+8. MLE for v
+
 
 This code allows you to compute estimates of the AR(1) coefficient and the variance using the `arima` function in R. The first case uses the conditional sum of squares, the second and third cases use the full likelihood with different starting points for the numerical optimization required to compute the MLE with the full likelihood.
 
@@ -324,7 +342,7 @@ sd=sqrt(v) # innovation standard deviation
 T=500 # number of time points
 yt=arima.sim(n = T, model = list(ar = phi), sd = sd) 
 
-#Using conditional sum of squares, equivalent to conditional likelihood 
+# Using conditional sum of squares, equivalent to conditional likelihood 
 arima_CSS=arima(yt,order=c(1,0,0),method="CSS",n.cond=1,include.mean=FALSE)
 cat("AR estimates with conditional sum of squares (CSS) for phi and v:", arima_CSS$coef,arima_CSS$sigma2,
 "\n")
@@ -346,22 +364,31 @@ This code shows you how to compute the MLE for $\psi$ using the full likelihood 
 ```{r}
 #| label: "MLE for AR(1) with full likelihood"
 set.seed(2021)
-phi=0.9 # ar coefficient
+phi=0.9 # <1>
 v=1
-sd=sqrt(v) # innovation standard deviation
-T=500 # number of time points
+sd=sqrt(v) # <2>
+T=500 # <3>
 yt=arima.sim(n = T, model = list(ar = phi), sd = sd) 
 
 ## MLE, full likelihood AR(1) with v=1 assumed known 
-# log likelihood function
-log_p <- function(phi, yt){
+
+log_p <- function(phi, yt){ #<4>
   0.5*(log(1-phi^2) - sum((yt[2:T] - phi*yt[1:(T-1)])^2) - yt[1]^2*(1-phi^2))
 }
 
-# Use a built-in optimization method to obtain maximum likelihood estimates
-result =optimize(log_p, c(-1, 1), tol = 0.0001, maximum = TRUE, yt = yt)
+result = optimize(log_p, c(-1, 1), 
+                  tol = 0.0001, 
+                  maximum = TRUE, 
+                  yt = yt) # <5>
 cat("\n MLE of full likelihood for phi: ", result$maximum)
 ```
+
+1. ar coefficient
+2. innovation standard deviation
+3. number of time points
+4. log likelihood function
+5. using a built-in optimization method to obtain MLE
+
 
 ## Bayesian inference in the AR(1)
 
