--- a/C3-L04.qmd
+++ b/C3-L04.qmd
@@ -91,6 +91,7 @@ In the third line we reinterpreting :
 
 In the last line we remove $\omega$ on from the left term based on independence. And we remove $\theta$ from the right term based on independence.
 
+<!-- TODO: extract transcript to external file and summarize -->
 
 ::: {.callout-note collapse="true"}
 ## Video transcript {.unnumbered .unlisted}
@@ -181,6 +182,8 @@ $$
 $$ {#eq-posterior-distribution}
 
 Each of the full conditional distributions can be derived from this joint posterior by retaining the terms that involve the parameter of interest, and recognizing the product of the selected terms as the kernel of a known family of distributions.
+
+<!-- TODO: extract transcript to external file and summarize -->
 
 
 ::: {.callout-note collapse="true"}
