--- a/A14.qmd
+++ b/A14.qmd
@@ -23,8 +23,8 @@ The Moore-Penrose inversion is a method for computing the pseudoinverse of a mat
 
 ## Definition of the Moore-Penrose Inverse 1
 
-The Moore–Penrose inverse of the m × n matrix A is the n × m
-matrix, denoted by A+ , which satisfies the conditions
+The Moore–Penrose inverse of the $m × n$ matrix $A$ is the $n × m$
+matrix, denoted by $A^+$, which satisfies the conditions
 
 $$
 AA+ A = A
@@ -52,15 +52,12 @@ Corresponding to each m × n matrix A, one and only one n × m matrix $A^+$ exis
 
 Definition @def-moore-penrose-inverse-1 is the definition of a generalized inverse given by Penrose (1955).
 
-The following alternative definition, which we will find useful on some occasions,
-utilizes properties of the Moore–Penrose inverse that were first illustrated by Moore (1935).
+The following alternative definition, which we will find useful on some occasions, utilizes properties of the Moore–Penrose inverse that were first illustrated by Moore (1935).
 
 ::: {#def-moore-penrose-inverse-2}
-
 ## Definition of the Moore-Penrose Inverse 2
 
-Let A be an m × n matrix. Then the Moore–Penrose inverse of A is
-the unique n × m matrix A+ satisfying
+Let $A$ be an $m × n$ matrix. Then the Moore–Penrose inverse of $A$ is the unique $n × m$ matrix $A^+$ satisfying
 
 $$
 AA^+ = P_{R(A)}
@@ -70,11 +67,11 @@ $$
 A^+ A = P_{R(A^+)}
 $$ {#eq-moore-penrose-6}
 
-where $P_{R(A)}$ and $P_{R(A^+)}$ are the projection matrices of the range spaces of $A$ and $A^+$,
-respectively.
+where $P_{R(A)}$ and $P_{R(A^+)}$ are the projection matrices of the range spaces of $A$ and $A^+$, respectively.
+:::
+
 
 ::: {#thm-properties-moore-penrose-inverse}
-
 ## Properties of the Moore-Penrose inverse 
 
 Let A be an $m \times n$ matrix. Then:
@@ -89,14 +86,53 @@ g. $A^+ = (A^T A)^+ A^T = A^T (AA^T)^+$
 h. $A^+ = (A^T A)^{-1} A^T$ and $A^+ A = I_n , \text{ if } rank(A) = n$
 i. $A^+ = A^T (AA^T)^{-1}$ and $AA^+ = I_m , \text{ if } rank(A) = m$
 j. $A^+ = A^T$  if the columns of A are orthogonal, that is, $A^T A = I_n$
-
 :::
 
 
 ::: {#thm-rank}
-
 ##  Rank of Moore-Penrose Inverse
 
 For any $m \times n$ matrix $A$, $\text{rank}(A) = \text{rank}(A^+) = \text{rank}(AA^+) = \text{rank}(A^+ A)$.
 :::
 
+
+::: {#thm-symmetric-moore-penrose-inverse}
+##  Symmetric Moore-Penrose Inverse
+
+
+Let A be an m × m symmetric matrix. Then
+a. $A^+$ is also symmetric,
+b. $AA^+$ = $A^+A,
+c. $A^+$ = $A$, if $A$ is idempotent.
+:::
+
+
+<!-- add about use in MLE -->
+The Moore-Penrose inverse is particularly useful in maximum likelihood estimation (MLE) for linear models. In MLE, we often need to solve linear equations of the form $Ax = b$, where $A$ is the design matrix and $b$ is the response vector. If $A$ is not full rank or is not square, we can use the Moore-Penrose inverse to find a solution that minimizes the residual sum of squares.
+
+In the context of MLE, the Moore-Penrose inverse allows us to obtain parameter estimates even when the design matrix is singular or when there are more predictors than observations. This is achieved by projecting the response vector onto the column space of the design matrix, leading to a solution that is consistent and has desirable statistical properties.
+
+## Cholesky Decomposition {#sec-cholesky}
+
+The Cholesky decomposition is a method for factorizing a positive definite matrix into the product of a lower triangular matrix and its transpose. It is particularly useful for solving systems of linear equations and for generating samples from multivariate normal distributions.
+
+::: {#def-cholesky-decomposition}
+## Definition of the Cholesky Decomposition
+
+Let $A$ be a symmetric positive definite matrix. The Cholesky decomposition of $A$ is a factorization of the form:
+$$
+A = LL^T
+$$ {#eq-cholesky-decomposition}
+where $L$ is a lower triangular matrix with positive diagonal entries.
+
+:::
+
+The Cholesky decomposition is unique for a given positive definite matrix, and it can be computed efficiently using algorithms such as the Doolittle algorithm or the Crout algorithm.
+
+The Cholesky decomposition has several important properties:
+
+1. If $A$ is positive definite, then $L$ is unique and has positive diagonal entries.
+2. The Cholesky decomposition can be used to solve linear systems of equations of the form $Ax = b$ by first solving $Ly = b$ for $y$, and then solving $L^Tx = y$.
+3. The Cholesky decomposition can be used to generate samples from a multivariate normal distribution by transforming samples from a standard normal distribution using the Cholesky factor $L$.  
+
+The Cholesky decomposition is widely used in various applications, including numerical optimization, Bayesian inference, and machine learning. It is particularly useful for solving linear systems efficiently and for generating samples from multivariate normal distributions.
