--- a/A13.qmd
+++ b/A13.qmd
@@ -1,9 +1,9 @@
 ---
-title: "Yule-Walker Equations & Durbin-Levinson Recursion"
+title: "Appendix: Yule-Walker Equations & Durbin-Levinson Recursion"
 subtitle: "Appendix"
 description: "This appendix explains the Yule-Walker equations and the Durbin-Levinson recursion, which is a method for solving these equations efficiently using linear algebra."
 categories: 
-    - "Linear Algebra"
+    - "numerical linear algebra"
 keywords: 
     - "Durbin-Levinson recursion"
     - "Yule-Walker equations"
