--- a/A14.qmd
+++ b/A14.qmd
@@ -3,7 +3,7 @@ title: "Moore-Penrose Inversion & Cholesky Decomposition"
 subtitle: "Appendix"
 description: "This appendix explains the Moore-Penrose inversion and the Cholesky decomposition, which are methods for solving linear equations efficiently using linear algebra."
 categories: 
-    - "Linear Algebra"
+    - "numerical linear algebra"
 keywords: 
     - "Moore-Penrose inversion"
     - "Cholesky decomposition"
@@ -136,3 +136,53 @@ The Cholesky decomposition has several important properties:
 3. The Cholesky decomposition can be used to generate samples from a multivariate normal distribution by transforming samples from a standard normal distribution using the Cholesky factor $L$.  
 
 The Cholesky decomposition is widely used in various applications, including numerical optimization, Bayesian inference, and machine learning. It is particularly useful for solving linear systems efficiently and for generating samples from multivariate normal distributions.
+
+
+
+
+## Kronecker Product and Hadamard Product {#sec-kron-hadamard}
+
+The Kronecker product and Hadamard product are two important operations in linear algebra that are used to manipulate matrices in various ways.
+These operations are particularly useful in applications such as signal processing, image processing, and machine learning, where they can be used as short hand notation for certain matrix operations used in many algorithms.
+
+The Kronecker product is a matrix operation that takes two matrices and produces a block matrix by multiplying each element of the first matrix by the entire second matrix. 
+
+The Hadamard product, on the other hand, is an element-wise multiplication of two matrices of the same dimensions. 
+
+::: {#def-kron-product}
+## Definition of the Kronecker Product
+The Kronecker product of two matrices $A$ and $B$, denoted by $A \otimes B$, is defined as the block matrix formed by multiplying each element of $A$ by the entire matrix $B$. If $A$ is an $m \times n$ matrix and $B$ is a $p \times q$ matrix, then the Kronecker product $A \otimes B$ is an $(mp) \times (nq)$ matrix given by:
+
+$$
+A \otimes B = \begin{bmatrix}
+a_{11}B & a_{12}B & \cdots & a_{1n}B \\
+a_{21}B & a_{22}B & \cdots & a_{2n}B \\
+\vdots & \vdots & \ddots & \vdots \\
+a_{m1}B & a_{m2}B & \cdots & a_{mn}B
+\end{bmatrix}
+$$ {#eq-kron-product}
+
+where $a_{ij}$ are the elements of matrix $A$.
+:::
+
+some properties of the Kronecker product include:
+
+::: {#thm-properties-kron-product}
+## Properties of the Kronecker Product
+Let $A$ be an $m \times n$ matrix and $B$ be a $p \times q$ matrix. Then:
+
+a. $a \otimes A = A\otimes a$ for any scalar $a$ (scalar multiplication property)
+b. $(aA) \otimes (bB) = ab(A \otimes B)$ for any scalars $a$ and $b$ (scalar multiplication property)
+c. $(A \otimes B) \otimes C =  A \otimes (B\otimes C)$ (associative property)
+d. $(A+B) \otimes C = (A \otimes C) + (B \otimes C)$  when $A,B,C$ are matrices of the same size (distributive property)
+e. $A \otimes (B+C) = (A \otimes B) + (A \otimes C)$  when $A,B,C$ are matrices of the same size (distributive property)
+f. $(A \otimes B)^{\prime} = A^{\prime} \otimes B^{\prime}$ (transpose property)
+g. $(\mathbf{a} \otimes \mathbf{b})^{\prime} = \mathbf{a}^{\prime} \otimes \mathbf{b}^{\prime}$ (commutativity property for vectors)
+h. $\text{det}(A \otimes B) = \text{det}(A)^{p} \cdot \text{det}(B)^{m}$ (determinant property)
+i. $\text{rank}(A \otimes B) = \text{rank}(A) \cdot \text{rank}(B)$ (rank property)
+j. $(A \otimes B)^{-1} = A^{-1} \otimes B^{-1}$, if both $A$ and $B$ are invertible (inverse property)
+k. $(A \otimes B)(C \otimes D) = (AC) \otimes (BD)$ (multiplication property)
+;. $\text{tr}(A \otimes B) = \text{tr}(A) \cdot \text{tr}(B)$ (trace property)
+
+:::
+
