--- a/A10.qmd
+++ b/A10.qmd
@@ -2,7 +2,7 @@
 title: "Appendix: Link Function"
 ---
 
-## Link function {#sec-link-function}
+## Link functions {#sec-link-function}
 
 
 In statistics, a generalized linear model (GLM) is a flexible generalization of ordinary linear regression. The GLM generalizes linear regression by allowing the linear model to be related to the response variable via a link function and by allowing the magnitude of the variance of each measurement to be a function of its predicted value.
